# mitra-mcp

./: .dockerignore  .env_example  .gitignore  Dockerfile  README.md  SETUP_GUIDE.md  docker-compose.yml  pyproject.toml
.agents/: AGENTS.md
mitra/: cli.py  clockify.py  config.py  git_utils.py  server.py  timers.py
mitra.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/mitra/: cli.py  clockify.py  config.py  context.py  server.py  wakatime.py
src/mitra/clients/: __init__.py  azure_devops.py  clockify.py
src/mitra/core/: __init__.py  context.py  crypto.py  oauth_service.py  oauth_store.py  registry.py  user.py
src/mitra/integrations/: __init__.py
src/mitra/integrations/azure_devops/: __init__.py  client.py  context.py  prompts.py  tools.py
src/mitra/integrations/clockify/: __init__.py  client.py  context.py  prompts.py  tools.py
src/mitra/integrations/google_calendar/: __init__.py  service.py  tools.py
src/mitra/integrations/wakatime/: __init__.py  client.py  context.py  tools.py
src/mitra/integrations/workflows/: __init__.py  fill_clockify.py  linkage.py  prompts.py
src/mitra/prompts/: __init__.py  guides.py
src/mitra/tools/: __init__.py  azure_devops.py  clockify.py  linkage.py  wakatime.py
tests/: test_clockify_rules.py
