[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mitra"
version = "0.1.0"
description = "All-in-one remote MCP server for Clockify integration and Git-based developer tracking"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.22.0",
    "httpx>=0.24.0",
    "click>=8.0.0",
    "cryptography>=41.0.0",
    "psycopg[binary]>=3.1.0",
]

[project.scripts]
mitra = "mitra.cli:cli"

[tool.setuptools.packages.find]
where = ["src"]
